chore: update dev script to use environment variables and modify token handling in auth routes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "node src/server.ts"
+    "dev": "node --watch --env-file=.env src/server.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
