chore: add experimental flag to start script in package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "main": "src/server.ts",
   "scripts": {
+    "start": "node --experimental-strip-types src/server.ts",
     "dev": "node --watch --env-file=.env src/server.ts"
   },
   "dependencies": {
